--- a/src/DashboardBundle/Resources/config/services.yml
+++ b/src/DashboardBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    dashboard.example:
-#        class: DashboardBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+   dashboard.utils.business:
+       class: DashboardBundle\UtilBusiness
+       arguments: ["@service_container"]
