Integrate apy grid bundle

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "speicher210/cloudinary-bundle": "^0.2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "doctrine/doctrine-migrations-bundle": "^1.0"
+        "doctrine/doctrine-migrations-bundle": "^1.0",
+        "apy/datagrid-bundle":"2.2.16"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
