--- a/src/DashboardBundle/Resources/config/services.yml
+++ b/src/DashboardBundle/Resources/config/services.yml
@@ -1,3 +1,6 @@
+parameters:
+    admin.paginator.limits.config: [15, 20, 30, 50,100,200,300,500]
+
 services:
   dashboard.utils.business:
     class: DashboardBundle\UtilBusiness
