--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "speicher210/cloudinary-bundle": "^0.2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "doctrine/doctrine-migrations-bundle": "^1.0",
-        "apy/datagrid-bundle":"2.2.16"
+        "apy/datagrid-bundle":"2.2.16",
+        "fresh/doctrine-enum-bundle": "^2.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
