--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,7 +6,7 @@ dashboard:
 user:
     resource: "@UserBundle/Controller/"
     type:     annotation
-    prefix:   /
+    prefix:   /dashboard/user
 
 app:
     resource: "@AppBundle/Controller/"
