--- a/src/DashboardBundle/Resources/config/services.yml
+++ b/src/DashboardBundle/Resources/config/services.yml
@@ -1,5 +1,7 @@
 parameters:
     admin.paginator.limits.config: [10, 15, 20, 30, 50,100,200,300,500]
+    grid.column.textext.class: DashboardBundle\Grid\RalfTextColumn
+    grid.column.icon.class: DashboardBundle\Grid\RalfIconColumn
 
 services:
   dashboard.utils.business:
@@ -23,3 +25,13 @@ services:
     arguments: ["@twig","@security.context","@service_container"]
     tags:
       - { name: twig.extension }
+
+  grid.column.textext:
+    class: %grid.column.textext.class%
+    tags:
+      - { name: grid.column.extension }
+
+  grid.column.icon:
+    class: %grid.column.icon.class%
+    tags:
+      - { name: grid.column.extension }
