--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -52,6 +52,7 @@ doctrine:
             enum: string
         types:
             GenderType: UserBundle\DBAL\Types\GenderType
+            PropertyEnumType: DashboardBundle\DBAL\Types\PropertyEnumType
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
         #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
