--- a/src/CommonBundle/Resources/config/services.yml
+++ b/src/CommonBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    common.example:
-#        class: CommonBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+    common.base.business:
+        class: CommonBundle\Business\BaseBusiness
+        arguments: ["@service_container"]
