--- a/src/CommonBundle/Resources/config/services.yml
+++ b/src/CommonBundle/Resources/config/services.yml
@@ -1,14 +1,14 @@
 services:
-    common.base.business:
-        class: CommonBundle\Business\BaseBusiness
-        arguments: ["@service_container"]
+  common.base.business:
+    class: RALF\CoreBundle\Business\RalfBusiness
+    arguments: ["@doctrine.orm.entity_manager"]
 
-    common.transactional.pointcut:
-            class:    CommonBundle\Aop\TransactionPointcut
-            arguments: ["@annotation_reader"]
-            tags:
-              - { name: jms_aop.pointcut, interceptor: ralf.core.transactional.interceptor }
+  common.transactional.pointcut:
+    class:    CommonBundle\Aop\TransactionPointcut
+    arguments: ["@annotation_reader"]
+    tags:
+      - { name: jms_aop.pointcut, interceptor: ralf.core.transactional.interceptor }
 
-    common.transactional.interceptor:
-        class:    CommonBundle\Aop\TransactionInterceptor
-        arguments: ["@doctrine.orm.entity_manager"]
+  common.transactional.interceptor:
+    class:    CommonBundle\Aop\TransactionInterceptor
+    arguments: ["@doctrine.orm.entity_manager"]
