--- a/src/CommonBundle/Resources/config/services.yml
+++ b/src/CommonBundle/Resources/config/services.yml
@@ -1,13 +1,13 @@
 services:
   common.base.business:
-    class: RALF\CoreBundle\Business\RalfBusiness
+    class: CommonBundle\Business\BaseBusiness
     arguments: ["@doctrine.orm.entity_manager"]
 
   common.transactional.pointcut:
     class:    CommonBundle\Aop\TransactionPointcut
     arguments: ["@annotation_reader"]
     tags:
-      - { name: jms_aop.pointcut, interceptor: ralf.core.transactional.interceptor }
+      - { name: jms_aop.pointcut, interceptor: common.transactional.interceptor }
 
   common.transactional.interceptor:
     class:    CommonBundle\Aop\TransactionInterceptor
