--- a/src/DashboardBundle/Resources/config/services.yml
+++ b/src/DashboardBundle/Resources/config/services.yml
@@ -1,5 +1,6 @@
 parameters:
     admin.paginator.limits.config: [10, 15, 20, 30, 50,100,200,300,500]
+    admin.paginator.limits.template.config: [8, 12, 16, 20]
     grid.column.textext.class: DashboardBundle\Grid\RalfTextColumn
     grid.column.icon.class: DashboardBundle\Grid\RalfIconColumn
     grid.column.photo.class: DashboardBundle\Grid\RalfPhotoColumn
