Register UserPlan after profile is completed

--- a/src/DashboardBundle/Resources/config/services.yml
+++ b/src/DashboardBundle/Resources/config/services.yml
@@ -23,6 +23,10 @@ services:
     class: DashboardBundle\Business\TemplateBusiness
     parent: common.base.business
 
+  dashboard.upgrade.business:
+      class: DashboardBundle\Business\UpgradeBusiness
+      parent: common.base.business
+
   ralf.common.twig.extension.functions:
     class: DashboardBundle\Twig\Extension\Functions
     arguments: ["@twig","@security.context","@service_container"]
