Create contact functionality

--- a/src/DashboardBundle/Resources/config/services.yml
+++ b/src/DashboardBundle/Resources/config/services.yml
@@ -32,6 +32,10 @@ services:
       class: DashboardBundle\Business\ContactBusiness
       parent: common.base.business
 
+  dashboard.contactlist.business:
+      class: DashboardBundle\Business\ContactListBusiness
+      parent: common.base.business
+
   ralf.common.twig.extension.functions:
     class: DashboardBundle\Twig\Extension\Functions
     arguments: ["@twig","@security.context","@service_container"]
