--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -92,11 +92,11 @@ doctrine_migrations:
     name: Application Migrations
 
 hip_mandrill:
-    api_key: dzTYHcxm5N7IQIswifXIZA
-    disable_delivery: true # useful for dev/test environment. Default value is 'false'
+    api_key: "%mandrill_api_key%"
+    disable_delivery: false # useful for dev/test environment. Default value is 'false'
     # debug: passed to \Mandrill causing it to output curl requests. Useful to see output
     # from CLI script. Default value is 'false'
     debug: true
     default:
-        sender: atorresgonzalez339@gmail.com
+        sender: info@agentsbud.com
         sender_name: AgentsBud # Optionally define a sender name (from name)
