--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,6 +70,7 @@ doctrine:
 swiftmailer:
     transport: "%mailer_transport%"
     host:      "%mailer_host%"
+    port:      "%mailer_port%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
@@ -84,6 +85,15 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: UserBundle\Entity\User
+    service:
+            mailer: fos_user.mailer.twig_swift
+    from_email:
+            address:        info@agentsbud.com
+            sender_name:    AgentsBud
+    registration:
+            confirmation:
+                enabled: true
+                template:       emails/confirm.registration.email.html.twig
 
 doctrine_migrations:
     dir_name: "%kernel.root_dir%/DoctrineMigrations"
