--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -5,7 +5,7 @@ imports:
     - { resource: "@UserBundle/Resources/config/services.yml" }
     - { resource: "@DashboardBundle/Resources/config/services.yml" }
     - { resource: "@CommonBundle/Resources/config/services.yml" }
-    - { resource: "@AppCoreBundle/Presentation/Resources/config/services.yml" }
+    - { resource: "@AppCoreBundle/Presentation/Resources/config/services.php" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
